2カラムレイアウトにした

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -21,3 +21,12 @@ center {
 span.tag {
     float: right;
 }
+
+// 無いほうが見栄え良い気がするので
+nav.navbar {
+    display: none;
+}
+
+aside {
+    position: fixed;
+}
