--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,6 +27,11 @@ span.tag {
     .section:first-child {
         padding-top: 0;
     }
+    .section {
+        h1, h2, h3 {
+            font-weight: normal;
+        }
+    }
 }
 
 .eggc-diary {
