見た目調整

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,15 +40,8 @@ center {
 }
 
 .eggc-diary {
-    .section {
-        padding: 2rem;
-    }
-
-    p, pre, blockquote {
-        margin-left: 10rem;
-    }
-    ul {
-        margin-left: 12rem;
+    h1 {
+        font-size: 16px;
     }
 }
 
