月次で色つけてみた

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -57,3 +57,17 @@ center {
     width: 100%;
     border-bottom: 2px solid;
 }
+
+// https://www.tagindex.com/color/color_wheel.html
+.month-1 { border-left: 4px solid #00ffff; }
+.month-2 { border-left: 4px solid #0080ff; }
+.month-3 { border-left: 4px solid #0000ff; }
+.month-4 { border-left: 4px solid #8000ff; }
+.month-5 { border-left: 4px solid #ff00ff; }
+.month-6 { border-left: 4px solid #ff0080; }
+.month-7 { border-left: 4px solid #ff0000; }
+.month-8 { border-left: 4px solid #ff8000; }
+.month-9 { border-left: 4px solid #ffff00; }
+.month-10 { border-left: 4px solid #80ff00; }
+.month-11 { border-left: 4px solid #00ff00; }
+.month-12 { border-left: 4px solid #00ff80; }
