bootstrap のテーマを使う
色はえんじ色にした

--- a/styles/eggc-note-memo.scss
+++ b/styles/eggc-note-memo.scss
@@ -2,7 +2,7 @@
     & > .section {
         padding-left: 2em;
         margin-bottom: 4em;
-        border-left: solid 0.5em $secondary;
+        border-left: solid 0.5em $light;
 
         & > .section {
             margin-bottom: 3em;
