--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -1,6 +1,7 @@
 // えんじ色 https://encycolorpedia.jp/b3424a
 $primary: #b3424a;
 $secondary: #c86a71;
+$info: #f9c1cf;
 $light: #f7f6f5;
 $dark: #504946;
 
