📦 yarn add rehype-katex

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,6 +2,7 @@
 
 @import './theme.scss';
 @import 'bootstrap';
+@import 'katex/dist/katex.min.css';
 @import './eggc-note-memo.scss';
 @import './sidebar.scss';
 
