✨ スクロールが進みすぎないようにする

--- a/styles/eggc-note-memo.scss
+++ b/styles/eggc-note-memo.scss
@@ -1,5 +1,6 @@
 .eggc-note-memo {
     h1, h2, h3 {
+        scroll-margin-top: 4rem;
         a {
             text-decoration: none;
             color: $body-color;
