--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,15 +3,11 @@
 @import './theme.scss';
 @import 'bootstrap';
 @import 'katex/dist/katex.min.css';
+@import 'highlight.js/styles/github-dark.css';
 @import './eggc-note-memo.scss';
 @import './sidebar.scss';
 
 body { color: $dark }
-
-pre {
-    background-color: $dark;
-    padding: $font-size-base;
-}
 
 main {
     padding: 4px;
