--- a/styles/top.scss
+++ b/styles/top.scss
@@ -1,20 +1,50 @@
 .top-sign-container {
-    height: 60%;
+    height: 80%;
     padding: 0;
     background: $primary;
     color: $light;
     display: flex;
     justify-content: center;
     align-items: center;
-}
 
-.top-sign-board {
-    border-color: $light;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    background-image: url('/img/top-logo.png');
-    background-size: cover;
+    .top-sign-container-2 {
+        width: 400px;
+        height: 200px;
+        border-style: solid;
+        border-width: 2px;
+        border-color: $secondary;
+        display:flex;
+        justify-content: space-evenly;
+        align-items: center;
+
+        .top-sign-board {
+            border-color: $light;
+            border-style: solid;
+            border-width: 1px;
+            border-radius: 50%;
+            width: 100px;
+            height: 100px;
+            background-image: url('/img/top-logo.png');
+            background-size: cover;
+        }
+
+        .top-sign-name-container {
+            .top-sign-name {
+                font-weight: bolder;
+            }
+
+            .top-sign-sns {
+                a {
+                    color: $light;
+                    text-decoration: none;
+                }
+                span {
+                    font-size: smaller;
+                    margin-left: 0.3em;
+                    margin-right: 1em;
+                }
+            }
+
+        }
+    }
 }
