--- a/styles/eggc-note-memo.scss
+++ b/styles/eggc-note-memo.scss
@@ -3,7 +3,7 @@
         scroll-margin-top: 4rem;
         a {
             text-decoration: none;
-            color: $body-color;
+            color: $info;
         }
     }
 
