--- a/styles/top.scss
+++ b/styles/top.scss
@@ -1,8 +1,6 @@
 .top-sign-container {
     height: 80%;
     padding: 0;
-    background: $primary;
-    color: $light;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,14 +9,14 @@
         width: 400px;
         height: 200px;
         border-style: solid;
-        border-width: 2px;
-        border-color: $secondary;
+        border-width: 1px;
+        border-color: $primary;
         display:flex;
         justify-content: space-evenly;
         align-items: center;
 
         .top-sign-board {
-            border-color: $light;
+            border-color: $primary;
             border-style: solid;
             border-width: 1px;
             border-radius: 50%;
@@ -35,8 +33,8 @@
 
             .top-sign-sns {
                 a {
-                    color: $light;
                     text-decoration: none;
+                    &:hover { color: inherit }
                 }
                 span {
                     font-size: smaller;
